<resources>
    <string name="app_name">TaskMaster</string>

    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">
Keep Your Plans Aligned on Different Devices with TaskMaster\'s Easy-to-Use Interface</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="ime">Name</string>
    <string name="šifra">Password</string>
    <string name="email">Email Address</string>

    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="my_profile_nav">My Profile</string>
    <string name="about_app">About app</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update_card">UPDATE CARD</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="my_profile">My Profile</string>

    <string name="create_board_title">Create Board</string>
    <string name="settings_title">Settings</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>

    <string name="no_boards_are_available">No Boards</string>

    <string name="action_add_list">Add List </string>
    <string name="hint_list_name">List Name</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="friends">Friends</string>

    <string name="add_friend">Add Friend</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD FRIEND</string>
    <string name="search_friend">Search Friend</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="select_color_label">Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Friends</string>

    <string name="date">Date</string>
    <string name="select_due_date">Select Date</string>
    <string name="delete_card">Delete Card</string>

    <string name="str_select_color">Select Color</string>
    <string name="str_select_friend">Select Friend</string>

    <string name="default_notification_channel_id">taskmasters_notification_channel_id</string>
</resources>